[workspace]
members  = ["crates/*"]
resolver = "2"


	[workspace.package]
	authors     = ["magic-akari <akari.ccino@gmail.com>"]
	description = "A WASM Based Python Formatter"
	edition     = "2021"
	homepage    = "https://github.com/wasm-fmt/ruff_fmt"
	keywords    = ["wasm", "ruff", "python", "formatter"]
	license     = "MIT"
	readme      = "README.md"
	repository  = "https://github.com/wasm-fmt/ruff_fmt"
	version     = "0.10.0"


	[workspace.dependencies]
	ruff_fmt_config       = { path = "crates/ruff_fmt_config" }
	ruff_formatter        = { git = "https://github.com/astral-sh/ruff.git", tag = "0.10.0" }
	ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.10.0" }


	anyhow             = "1.0"
	serde              = "1.0"
	serde-wasm-bindgen = "0.6"
	serde_json         = "1.0"
	testing_macros     = "1"
	wasm-bindgen       = "0.2.95"


[profile.release]
codegen-units = 1
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information

[patch.crates-io]
unicode_names2 = { path = "crates/unicode_names2_patch" }
