[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "A WASM Based Python Formatter"
edition     = "2021"
homepage    = "https://github.com/wasm-fmt/ruff_fmt"
keywords    = ["wasm", "ruff", "python", "formatter"]
license     = "MIT"
name        = "ruff_fmt"
readme      = "README.md"
repository  = "https://github.com/wasm-fmt/ruff_fmt"
version     = "0.14.13"


	[package.metadata.wasm-pack.profile.release]
	wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]


[dependencies]
getrandom             = { version = "0.3.4", features = ["wasm_js"] }
ruff_formatter        = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.14" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.14" }
ruff_text_size        = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.14" }
serde                 = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen    = "0.6"
serde_json            = { version = "1.0", features = ["preserve_order"] }
uuid                  = { version = "1", features = ["js"] }
wasm-bindgen          = "0.2.108"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information

[patch.crates-io]
regex          = { path = "crates/regex_patch" }
unicode_names2 = { path = "crates/unicode_names2_patch" }
