[package]
name = "ruff_fmt"

authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true
version.workspace     = true

    [package.metadata.wasm-pack.profile.release]
    wasm-opt = ["-Os"]


[dependencies]
ruff_fmt_config       = { workspace = true }
ruff_formatter        = { workspace = true }
ruff_python_formatter = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde-wasm-bindgen    = "0.6"
serde_json            = { workspace = true, features = ["preserve_order"] }
wasm-bindgen          = { workspace = true }

[dev-dependencies]
testing_macros = "0.2.11"

[lib]
crate-type = ["cdylib", "rlib"]
