[package]
name = "ruff_fmt"

authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true
version.workspace     = true

	[package.metadata.wasm-pack.profile.release]
	wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
getrandom             = { workspace = true }
ruff_fmt_config       = { workspace = true }
ruff_formatter        = { workspace = true }
ruff_python_formatter = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde-wasm-bindgen    = { workspace = true }
serde_json            = { workspace = true, features = ["preserve_order"] }
uuid                  = { workspace = true }
wasm-bindgen          = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
