[package]
authors.workspace    = true
description          = "Config for ruff_fmt"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "ruff_fmt_config"
repository.workspace = true
version.workspace    = true


[dependencies]
ruff_formatter        = { workspace = true }
ruff_python_formatter = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde_json            = { workspace = true, features = ["preserve_order"] }
