[package]
authors.workspace    = true
description          = "Python formatting plugin for dprint via ruff."
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "ruff_fmt_dprint"
repository.workspace = true
version.workspace    = true

[lib]
crate-type = ["lib", "cdylib"]


[dependencies]
anyhow                = "1.0.64"
dprint-core           = { version = "0.63.2", features = ["wasm"] }
ruff_formatter        = { workspace = true }
ruff_python_formatter = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde_json            = { workspace = true, features = ["preserve_order"] }
