[package]
description = "Python formatting plugin for dprint via ruff."
name        = "ruff_fmt_dprint"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true
version.workspace    = true

    [package.metadata.wasm-pack.profile.release]
    wasm-opt = ["-Os"]


[lib]
crate-type = ["lib", "cdylib"]


[dependencies]
anyhow                = "1.0.75"
dprint-core           = { version = "0.65.0", features = ["wasm"] }
ruff_fmt_config       = { workspace = true }
ruff_formatter        = { workspace = true }
ruff_python_formatter = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde_json            = { workspace = true, features = ["preserve_order"] }
