[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
edition     = "2021"
license     = "MIT"
name        = "unicode_names2"
repository  = "https://github.com/wasm-fmt/ruff_fmt"
version     = "1.2.2"


	[package.metadata.wasm-pack.profile.release]
	wasm-opt = ["-Os"]


[lib]
crate-type = ["cdylib", "rlib"]
